testing/Travis/testcases/TypeChecker/shouldFail/RelationalAdditionTypeMismatch.adl
CONTEXT RelationalAdditionTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT RelationalAdditionTypeMismatchCheck
{+ Test that relational addition fails when concepts cannot be joined.
   This verifies the type checker correctly rejects r[A*B]!r~[B*A] due to type mismatch. +}

RELATION r[A*B]
RELATION result[A*C]

RULE testRelationalAdditionFail: result = r!r~

ENDCONTEXT
